fixed horizontal alignment

--- a/css/products.css
+++ b/css/products.css
@@ -57,6 +57,7 @@
   padding: 1.2rem;
   text-align: center;
   justify-items: center;
+  justify-content: center;
 }
 
 .content-image-wrapper {
